--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,24 +1,9 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 body {
   width: 100%;
   height: 100vh;
   overflow: auto;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #fff;
+  background-color: #1d1d1d;
   font-synthesis: none;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif, Poppins;
   text-rendering: optimizeLegibility;
@@ -31,10 +16,16 @@ body {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+}
+
+.container.app-layout-container {
+  height: auto;
+  overflow: hidden;
+  margin: 50px auto;
+}
+
+@media (min-width: 1200px) {
+  .container.app-layout-container {
+    width: 1000px;
   }
 }
